# zentinel-agent-soap

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
src/: agent.rs  config.rs  error.rs  lib.rs  main.rs  parser.rs  validator.rs
tests/: integration_test.rs
